--- a/css/tos.css
+++ b/css/tos.css
@@ -5,6 +5,7 @@ body {
 .navbar {
   margin-top: 1%;
 }
+
 .navbar .container {
   border-radius: 10px;
   background-color: #ffffff;
@@ -12,21 +13,26 @@ body {
   padding-left: 5%;
   padding-right: 5%;
 }
+
 .navbar .container .navbar-brand {
   width: 10%;
 }
+
 .navbar .container .navbar-brand img {
   height: 56px;
 }
+
 .navbar .container .collapse .navbar-nav .nav-item a {
   font-weight: 600;
 }
+
 .navbar .container .navbar-toggler:focus,
 .navbar .container .navbar-toggler:active,
 .navbar .container .navbar-toggler-icon:focus {
   outline: none;
   box-shadow: none;
 }
+
 .navbar .container .disc .btn {
   background-color: #0b96ff;
   color: white;
@@ -36,6 +42,7 @@ body {
   border: 2px solid #0b96ff;
   transition: all 0.3s ease;
 }
+
 .navbar .container .disc .btn:hover {
   color: #0b96ff;
   background-color: transparent;
@@ -60,15 +67,18 @@ body {
     margin-bottom: 2%;
   }
 }
+
 @media only screen and (max-width: 575px) {
   .navbar .container {
     margin-left: 1%;
     margin-right: 1%;
     width: 98%;
   }
+
   .navbar .container .disc .btn {
     margin-bottom: 2%;
   }
+
   .tos {
     margin-left: 1%;
     margin-right: 1%;
@@ -84,4 +94,6 @@ body {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
   }
-}/*# sourceMappingURL=tos.css.map */
+}
+
+/*# sourceMappingURL=tos.css.map */
