--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,148 @@
+@media only screen and (max-width: 991px) {
+  .mainbox .nav-pc {
+    display: none;
+  }
+  .mainbox .nav-mb {
+    overflow: hidden !important;
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    min-height: 48px;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .mainbox .nav-mb .top {
+    height: 48px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mainbox .nav-mb .top .icon {
+    height: 48px;
+    display: flex;
+    align-items: center;
+  }
+  .mainbox .nav-mb .top .icon img {
+    height: 32px;
+  }
+  .mainbox .nav-mb .top .list {
+    display: flex;
+    height: 48px;
+    align-items: center;
+  }
+  .mainbox .nav-mb .top .list .link {
+    color: white;
+    font-size: 18px;
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 40px;
+    transition: all 0.3s ease;
+  }
+  .mainbox .nav-mb .top .list .link:hover {
+    filter: brightness(80%);
+  }
+  .mainbox .nav-mb .top .list .store {
+    letter-spacing: 0.5px;
+    font-weight: 900;
+    background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 4s linear infinite;
+  }
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+  .mainbox .nav-mb .top .list .menuIcon {
+    height: 48px;
+    width: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  .mainbox .nav-mb .top .list .menuIcon i {
+    color: white;
+    font-size: 24px;
+    transition: all 0.3s ease;
+  }
+  .mainbox .nav-mb .top .list .menuIcon .open {
+    transform: rotate(180deg);
+  }
+  .mainbox .nav-mb .bottom {
+    max-height: 0;
+    margin-top: 10px;
+  }
+  .mainbox .nav-mb .bottom a {
+    opacity: 0;
+    color: white;
+    margin-bottom: 10px;
+    line-height: 2;
+    font-weight: 900;
+    font-size: 18px;
+    text-decoration: none;
+    transition: opacity 1s ease;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .mainbox .nav-mb {
+    display: none;
+  }
+  .mainbox .nav-pc {
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 48px;
+    background-color: rgba(0, 0, 0, 0.18);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .mainbox .nav-pc .icon {
+    height: 40px;
+  }
+  .mainbox .nav-pc .icon img {
+    height: 40px;
+  }
+  .mainbox .nav-pc .list a {
+    color: white;
+    font-size: 18px;
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 40px;
+    transition: all 0.3s ease;
+  }
+  .mainbox .nav-pc .list a:hover {
+    filter: brightness(80%);
+  }
+  .mainbox .nav-pc .list .store {
+    letter-spacing: 0.5px;
+    font-weight: 900;
+    background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 4s linear infinite;
+  }
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -43,105 +188,6 @@ body {
     -o-object-position: center;
        object-position: center;
   }
-}
-.mainbox .navbar {
-  z-index: 2;
-  position: absolute;
-  width: 100%;
-  height: -moz-max-content;
-  height: max-content;
-  top: 0;
-  left: 0;
-  background-color: transparent !important;
-}
-.mainbox .navbar .container-fluid .navbar-brand {
-  width: 64px;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-}
-.mainbox .navbar .container-fluid .collapse ul li a {
-  color: white;
-  font-weight: 900 !important;
-  font-size: 18px;
-  transition: filter 0.3s;
-}
-.mainbox .navbar .container-fluid .collapse ul li a:hover {
-  filter: brightness(70%);
-}
-@media only screen and (max-width: 991px) {
-  .mainbox .navbar .container-fluid .collapse ul li a {
-    font-size: 16px;
-  }
-  .mainbox .navbar .container-fluid .collapse ul li .pc-mob {
-    display: none;
-  }
-}
-.mainbox .navbar .container-fluid .collapse ul li .store {
-  background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
-  background-size: 200% auto;
-  color: #000;
-  background-clip: text;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shine 4s linear infinite;
-}
-@keyframes shine {
-  to {
-    background-position: 200% center;
-  }
-}
-.mainbox .navbar .container-fluid .navbar-toggler {
-  width: -moz-max-content;
-  width: max-content;
-  display: flex;
-  align-items: center;
-  height: -moz-max-content;
-  height: max-content;
-  border: none;
-  outline: none;
-}
-.mainbox .navbar .container-fluid .navbar-toggler .mob-store {
-  display: none;
-}
-@media only screen and (max-width: 991px) {
-  .mainbox .navbar .container-fluid .navbar-toggler .mob-store {
-    display: block;
-    font-weight: 900;
-    margin: 0;
-    padding: 0;
-    margin-right: 20px;
-  }
-  .mainbox .navbar .container-fluid .navbar-toggler .mob-store {
-    background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
-    background-size: 200% auto;
-    color: #000;
-    background-clip: text;
-    text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: shine 4s linear infinite;
-  }
-  @keyframes shine {
-    to {
-      background-position: 200% center;
-    }
-  }
-}
-.mainbox .navbar .container-fluid .navbar-toggler .navbar-toggler-icon {
-  transition: all 0.3s ease;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url("../assets/icons/list.svg");
-}
-.mainbox .navbar .container-fluid .navbar-toggler .navbar-toggler-icon.open {
-  transform: rotate(180deg);
-}
-.mainbox .navbar .container-fluid .navbar-toggler:focus {
-  outline: none;
-  box-shadow: none;
 }
 .mainbox .content {
   z-index: 2;
@@ -190,6 +236,7 @@ body {
   }
 }
 .mainbox .content .buttons {
+  margin-top: 10px;
   display: flex;
   -moz-column-gap: 20px;
        column-gap: 20px;
@@ -242,6 +289,7 @@ body {
     font-size: 16px;
   }
   .mainbox .content .buttons {
+    margin-top: 10px;
     -moz-column-gap: 10px;
          column-gap: 10px;
   }
