--- a/css/tos.css
+++ b/css/tos.css
@@ -9,47 +9,147 @@ body {
   background-color: #000;
 }
 
-.navbar {
-  max-width: 100%;
-}
-.navbar .container-fluid .navbar-brand {
-  width: 64px;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-}
-.navbar .container-fluid .collapse ul li a {
-  color: white;
-  font-weight: 900;
-  font-size: 18px;
-  transition: filter 0.3s;
-}
-.navbar .container-fluid .collapse ul li a:hover {
-  filter: brightness(70%);
-}
-.navbar .container-fluid .collapse ul li .store {
-  background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
-  background-size: 200% auto;
-  color: #000;
-  background-clip: text;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shine 4s linear infinite;
-}
-@keyframes shine {
-  to {
-    background-position: 200% center;
+@media only screen and (max-width: 991px) {
+  .nav-pc {
+    display: none;
+  }
+  .nav-mb {
+    overflow: hidden !important;
+    width: 100%;
+    min-height: 48px;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .nav-mb .top {
+    height: 48px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-mb .top .icon {
+    height: 48px;
+    display: flex;
+    align-items: center;
+  }
+  .nav-mb .top .icon img {
+    height: 32px;
+  }
+  .nav-mb .top .list {
+    display: flex;
+    height: 48px;
+    align-items: center;
+  }
+  .nav-mb .top .list .link {
+    color: white;
+    font-size: 18px;
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 40px;
+    transition: all 0.3s ease;
+  }
+  .nav-mb .top .list .link:hover {
+    filter: brightness(80%);
+  }
+  .nav-mb .top .list .store {
+    letter-spacing: 0.5px;
+    font-weight: 900;
+    background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 4s linear infinite;
+  }
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+  .nav-mb .top .list .menuIcon {
+    height: 48px;
+    width: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  .nav-mb .top .list .menuIcon i {
+    color: white;
+    font-size: 24px;
+    transition: all 0.3s ease;
+  }
+  .nav-mb .top .list .menuIcon .open {
+    transform: rotate(180deg);
+  }
+  .nav-mb .bottom {
+    max-height: 0;
+    margin-top: 10px;
+  }
+  .nav-mb .bottom a {
+    opacity: 0;
+    color: white;
+    margin-bottom: 10px;
+    line-height: 2;
+    font-weight: 900;
+    font-size: 18px;
+    text-decoration: none;
+    transition: opacity 1s ease;
   }
 }
-.navbar .container-fluid .navbar-toggler {
-  border-color: rgb(255, 255, 255);
+@media only screen and (min-width: 992px) {
+  .nav-mb {
+    display: none;
+  }
+  .nav-pc {
+    width: 100%;
+    height: 48px;
+    background-color: rgba(0, 0, 0, 0.18);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .nav-pc .icon {
+    height: 40px;
+  }
+  .nav-pc .icon img {
+    height: 40px;
+  }
+  .nav-pc .list a {
+    color: white;
+    font-size: 18px;
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 40px;
+    transition: all 0.3s ease;
+  }
+  .nav-pc .list a:hover {
+    filter: brightness(80%);
+  }
+  .nav-pc .list .store {
+    letter-spacing: 0.5px;
+    font-weight: 900;
+    background: linear-gradient(to right, #fff 20%, #ff0 40%, #ff0 60%, #fff 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 4s linear infinite;
+  }
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
 }
-.navbar .container-fluid .navbar-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
 .tos {
   color: white;
   margin-top: 50px;
