--- a/css/tos.scss
+++ b/css/tos.scss
@@ -1,3 +1,5 @@
+
+
 * {
   margin: 0;
   padding: 0;
@@ -9,67 +11,185 @@ body {
   background-color: #000;
 }
 
-.navbar {
-  max-width: 100%;
-  .container-fluid {
-    .navbar-brand {
-      width: 64px;
-      user-select: none;
-      -moz-user-select: none;
-      -webkit-user-drag: none;
-      -webkit-user-select: none;
-    }
+// Mobile
+@media only screen and (max-width: 991px) {
+  .nav-pc {
+    display: none;
+  }
 
-    .collapse {
-      ul {
-        li {
-          a {
-            color: white;
-            font-weight: 900;
-            font-size: 18px;
-            transition: filter 0.3s;
+  .nav-mb {
+    overflow: hidden !important;
+    width: 100%;
+    min-height: 48px;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
 
-            &:hover {
-              filter: brightness(70%);
+    .top {
+      height: 48px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .icon {
+        height: 48px;
+        display: flex;
+        align-items: center;
+
+        img {
+          height: 32px;
+        }
+      }
+
+      .list {
+        display: flex;
+        height: 48px;
+        align-items: center;
+        .link {
+          color: white;
+          font-size: 18px;
+          font-weight: 900;
+          text-decoration: none;
+          margin-left: 40px;
+          transition: all 0.3s ease;
+
+          &:hover {
+            filter: brightness(80%);
+          }
+        }
+
+        .store {
+          letter-spacing: 0.5px;
+          font-weight: 900;
+          background: linear-gradient(
+            to right,
+            #fff 20%,
+            #ff0 40%,
+            #ff0 60%,
+            #fff 80%
+          );
+          background-size: 200% auto;
+
+          color: #000;
+          background-clip: text;
+          text-fill-color: transparent;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+
+          animation: shine 4s linear infinite;
+          @keyframes shine {
+            to {
+              background-position: 200% center;
             }
           }
+        }
 
-          .store {
-            background: linear-gradient(
-              to right,
-              #fff 20%,
-              #ff0 40%,
-              #ff0 60%,
-              #fff 80%
-            );
-            background-size: 200% auto;
+        .menuIcon {
+          height: 48px;
+          width: 48px;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
 
-            color: #000;
-            background-clip: text;
-            text-fill-color: transparent;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+          i {
+            color: white;
+            font-size: 24px;
+            transition: all 0.3s ease;
+          }
 
-            animation: shine 4s linear infinite;
-            @keyframes shine {
-              to {
-                background-position: 200% center;
-              }
-            }
+          .open {
+            transform: rotate(180deg);
           }
         }
       }
     }
 
-    .navbar-toggler {
-      border-color: rgb(255, 255, 255);
-      .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    .bottom {
+      max-height: 0;
+      margin-top: 10px;
+      a {
+        opacity: 0;
+        color: white;
+        margin-bottom: 10px;
+        line-height: 2;
+        font-weight: 900;
+        font-size: 18px;
+        text-decoration: none;
+        transition: opacity 1s ease;
       }
     }
   }
 }
 
+// Pc
+@media only screen and (min-width: 992px) {
+  .nav-mb {
+    display: none;
+  }
+  
+  .nav-pc {
+    width: 100%;
+    height: 48px;
+    background-color: rgba(0, 0, 0, 0.18);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    .icon {
+      height: 40px;
+
+      img {
+        height: 40px;
+      }
+    }
+
+    .list {
+      a {
+        color: white;
+        font-size: 18px;
+        font-weight: 900;
+        text-decoration: none;
+        margin-left: 40px;
+        transition: all 0.3s ease;
+
+        &:hover {
+          filter: brightness(80%);
+        }
+      }
+
+      .store {
+        letter-spacing: 0.5px;
+        font-weight: 900;
+        background: linear-gradient(
+          to right,
+          #fff 20%,
+          #ff0 40%,
+          #ff0 60%,
+          #fff 80%
+        );
+        background-size: 200% auto;
+
+        color: #000;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        animation: shine 4s linear infinite;
+        @keyframes shine {
+          to {
+            background-position: 200% center;
+          }
+        }
+      }
+    }
+  }
+}
 .tos {
   color: white;
   margin-top: 50px;
