--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -63,7 +63,7 @@
             );
             background-size: 200% auto;
 
-            color: #000;
+            color: #fff;
             background-clip: text;
             text-fill-color: transparent;
             -webkit-background-clip: text;
